Refined Rxy(m) material

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -173,6 +173,26 @@
   url          = {http://www.worldcat.org/isbn/0471576212},
   }
 
+@article{matlab_cpsd,
+  url          = {https://www.mathworks.com/help/signal/ref/cpsd.html},
+  author       = {MatLab},
+  title        = {cpsd: Cross power spectral density},
+  journal      = {MatLab},
+  year         = {2018},
+  month        = {accessed 2018 November 26},
+  publisher    = {The MathWorks, Inc.},
+  }
+
+@article{matlab_xcorr,
+  url          = {https://www.mathworks.com/help/signal/ref/xcorr.html},
+  author       = {MatLab},
+  title        = {xcorr: Cross-correlation},
+  journal      = {MatLab},
+  year         = {2018},
+  month        = {accessed 2018 November 26},
+  publisher    = {The MathWorks, Inc.},
+  }
+
 @book{montmort1713,
   isbn         = {978-0-8218-3781-8},
   isbn10       = {0821837818},
@@ -308,6 +328,17 @@
   isbn         = {https://archive.org/details/FubdamentalsOfSignalShinHammond/},
   }
 
+@book{svozil,
+  author       = {Karl Svozil},
+  title        = {Randomness \& Undecidability in Physics},
+  publisher    = {World Scientific},
+  year         = {1994},
+  isbn         = {981020809X},
+  oclc         = {26014466},
+  language     = {English},
+  url          = {http://books.google.com/books?vid=ISBN981020809X},
+  urlw         = {http://www.worldcat.org/isbn/981020809X},
+  }
 
 @book{szekely1986,
   author       = {G/'abor J. Sz/'ekely},
@@ -338,15 +369,18 @@
   urlg         = {http://books.google.com/books?vid=ISBN1119314208},
   }
 
-@book{svozil,
-  author       = {Karl Svozil},
-  title        = {Randomness \& Undecidability in Physics},
-  publisher    = {World Scientific},
-  year         = {1994},
-  isbn         = {981020809X},
-  oclc         = {26014466},
-  language     = {English},
-  url          = {http://books.google.com/books?vid=ISBN981020809X},
-  urlw         = {http://www.worldcat.org/isbn/981020809X},
+@article{welch1967,
+  title        = {The use of fast Fourier transform for the estimation of power spectra: A method based on time averaging over short, modified periodograms},
+  author       = {P. Welch},
+  journal      = {IEEE Transactions on Audio and Electroacoustics},
+  volume       = {15},
+  number       = {2},
+  year         = {1967},
+  month        = {June},
+  doi          = {https://doi.org/10.1109/TAU.1967.1161901},
+  publisher    = {IEEE},
+  pages        = {70--73},
+  issn         = {0018-9278},
+  eissn        = {1558-2582},
+  url          = {https://ieeexplore.ieee.org/abstract/document/1161901},
   }
-
