Added 'energy spectral density' definition and cast PSD result in terms of it

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -18,6 +18,21 @@
   url          = {https://apps.dtic.mil/dtic/tr/fulltext/u2/a195145.pdf},
   }
 
+@book{bendat2011,
+  isbn10       = {1118210824},
+  isbn         = {9781118210826},
+  title        = {Random Data: Analysis and Measurement Procedures},
+  volume       = {729},
+  year         = {2010},
+  series       = {Wiley Series in Probability and Statistics},
+  author       = {Julius S. Bendat and Allan G. Piersol},
+  edition      = {4},
+  publisher    = {John Wiley \& Sons},
+  pages        = {640},
+  url          = {http://books.google.com/books?vid=ISBN1118210824},
+  urla         = {http://www.amazon.com/dp/1118210824},
+  }
+
 @book{billingsley1995,
   author       = {Patrick Billingsley},
   title        = {Probability And Measure},
@@ -204,7 +219,7 @@
   edition      = {2},
   language     = {French},
   note         = {``Essays on the analysis of games of chance", 2006 AMS reprint edition,
-                  An English translation about the \emph{St. Petersburg Paradox} correspondence 
+                  An English translation concerning the \emph{St. Petersburg Paradox} correspondence 
                   by Richard J. Pulskamp called ``Correspondence of Nicolas Bernoulli concerning the St. Petersburg Game"  
                   is available at \url{http://www.cs.xu.edu/math/Sources/Montmort/stpetersburg.pdf}},
   address      = {Providence, Rhode Island},
