--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -271,6 +271,7 @@ adjoint $\opFTa$ and inverse $\opFTi$.
 %---------------------------------------
 \begin{theorem}
 \label{thm:ft_prop}
+\label{thm:planform}
 %---------------------------------------
 Let $\opFT$ be the Fourier transform operator with adjoint $\opFTa$ and inverse $\opFT$.
 Let $\normopn$ be the operator norm with respect to the vector norm $\normn$ with respect to the 
