--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -571,15 +571,31 @@ Let $\rvx(t)$ be a random variable that is \prope{stationary in the mean} such t
   }
 \end{definition}
 
+%20181127%%---------------------------------------
+%20181127%\begin{definition}
+%20181127%\label{def:energy}
+%20181127%%---------------------------------------
+%20181127%Let $\rvx(t)$ be a random variable.
+%20181127%\defboxt{
+%20181127%  The \fnctd{energy} of $\rvx(t)$ is
+%20181127%  \\\indentx$\ds\pE\brs{\rvx(t)} = \lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau}\rvx(t)\dt$
+%20181127%  }
+%20181127%\end{definition}
+
 %---------------------------------------
 \begin{definition}
-\label{def:energy}
-%---------------------------------------
-Let $\rvx(t)$ be a random variable.
-\defboxt{
-  The \fnctd{energy} of $\rvx(t)$ is
-  \\\indentx$\ds\pE\brs{\rvx(t)} = \lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau}\rvx(t)\dt$
+\footnote{
+  \citerpg{bendat2011}{177}{1118210824}
   }
+\label{def:Pavg}
+%---------------------------------------
+Let $\rvx(t)$ be a \prope{wide sense stationary} random process.
+\defbox{\begin{array}{FMrc>{\ds}l}
+    (1).&The \fnctd{average power} $\Pavg$ of $\rvx(t)$ is 
+        & \Pavg\rvx(t) &\eqd& \lim_{\tau\to\infty}\frac{1}{2\tau}\int_{t\in\R} \abs{\rvx(t)}^2\dt
+  \\(2).&The \fnctd{energy spectral density} $\abs{\Fx(\omega)}^2$  of $\rvx(t)$ is 
+        & \abs{\Fx(\omega)}^2 &\eqd& \abs{\opFT\rvx(t)}^2
+\end{array}}
 \end{definition}
 
 Why does $\Swxx(\omega)$ deserve the name \fncte{power spectral density}?
@@ -594,10 +610,9 @@ Let $\rvx(t)$ be a \fncte{random process}.
     \\(B).&$\rvx(t)$ is \prope{ergodic in the mean}
   \end{array}}
   \implies
-  \brb{\begin{array}{M}
-    The \hie{power} of $\rvx(t)$
-    \\in the spectral interval $\intcc{\omega_1}{\omega_2}$ is
-    \\\indentx$\ds\text{power } = \int_{\omega_1}^{\omega_2} \Swxx(\omega)\dw$ 
+  \brb{\begin{array}{Frc>{\ds}lD}
+      (1).& \Swxx(\omega)      &=& \lim_{\tau\to\infty}\frac{1}{2\tau} \mcom{\abs{\ft{x}(\omega)}^2}{\fncte{(ESD)}} & and
+    \\(2).& \Pavg\brs{\rvx(t)} &=& \int_{\omega\in\R} \Swxx(\omega) \dw                               & 
   \end{array}}
   }
 \end{theorem}
@@ -624,6 +639,17 @@ Let $\rvx(t)$ be a \fncte{random process}.
    \\&=    \lim_{\tau\to\infty}\frac{1}{2\tau}\brs{\int_{t\in\R}\rvx(t)e^{-i\omega t} \dt}^\ast \ft{x}(\omega)
    \\&=    \lim_{\tau\to\infty}\frac{1}{2\tau} \ft{x}^\ast(\omega) \ft{x}(\omega)
    \\&=    \lim_{\tau\to\infty}\frac{1}{2\tau} \abs{\ft{x}(\omega)}^2
+\end{align*}
+\begin{align*}
+   \int_{\omega\in\R} \Swxx(\omega) \dw
+     &= \int_{\omega\in\R} \lim_{\tau\to\infty}\frac{1}{2\tau} \abs{\ft{x}(\omega)}^2 \dw
+   \\&= \lim_{\tau\to\infty}\frac{1}{2\tau} \int_{\omega\in\R} \abs{\ft{x}(\omega)}^2 \dw
+   \\&= \lim_{\tau\to\infty}\frac{1}{2\tau} \int_{t\in\R} \abs{\rvx(t)}^2 \dt
+     && \text{by \thme{Plancheral's formula}}
+     && \text{\xxref{thm:planform}{thm:plancherel}}
+   \\&= \Pavg
+     && \text{by definition of $\Pavg$}
+     && \text{\xref{def:Pavg}}
 \end{align*}
 
 Thus, $\Swxx(\omega)$ is the power density of $\rvx(t)$ in the frequency domain.
