--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1631,21 +1631,19 @@
 %--------------------------------------
 % Statistics
 %--------------------------------------
-\newcommand{\My}  [0] {\mathfnct{\mu_{\rvy}}}
-\newcommand{\Mt}  [0] {\mathfnct{\mu_{\rvt}}}
-
+\newcommand{\My}  {\mathfnct{\mu_{\rvy}}}
+\newcommand{\Mt}  {\mathfnct{\mu_{\rvt}}}
+\newcommand{\Pavg}{\mathfnct{P}_{\mathsfup{avg}}}  % average power
 %--------------------------------------
 % Random processes
 %--------------------------------------
 \newcommand{\coinhead}{\ensuretext{\fntSymbola\symbol{"263A}}}% "white smiley face"
 \newcommand{\cointail}{\ensuretext{\fntSymbola\symbol{"25CF}}}% "black circle"
-
 %--------------------------------------
 % System identification
 %--------------------------------------
 \newcommand{\Rxx}    [1][xx] {R_{\mathsfup{#1}}}  % Autocorrelation function
 \newcommand{\Sxx}    [1][xx] {S_{\mathsfup{#1}}}  % spectral density
-
 \newcommand{\Swxx}   [1][xx] {\tilde{S}_{\mathsfup{#1}}}  % spectral density
 \newcommand{\Swyy}   {\Swxx[yy]}
 \newcommand{\Swxy}   {\Swxx[xy]}
