started new chapter: systemid.tex (system identification); some information moved from randseq.tex

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -4,13 +4,21 @@
 % BibTeX input file
 %============================================================================
 
+@article{allemang1979,
+  author       = {Randall J. Allemang and R. Zimmerman and David L. Brown},
+  year         = {1979},
+  title        = {Technlqucs of Reducing Noise in Frquency Response Measurements},
+  journal      = {ASME Winter Annual Meeting},
+  note         = {session on Application of System Identlfication Techniques},
+  }
+
 @article{allemang1987,
+  author       = {Randall J. Allemang and David L. Brown and Robert W. Rost},
   number       = {AFWAL-TR-87-3069},
   volume       = {2},
   journal      = {Experimental Modal Analysis And Dynamic Component Synthesis},
   volume       = {11},
   journal      = {Measurement Techniques for Experimental Modal Analysis},
-  author       = {Randall J. Allemang and David L. Brown and Robert W. Rost},
   institution  = {Structural Dynamics Research Laboratory Department of Mechanical and Industrial Engineering University of Cincinnati},
   address      = {Cincinnati, Ohio 45221-0072},
   month        = {December},
