--- a/common/randseq.tex
+++ b/common/randseq.tex
@@ -606,6 +606,7 @@ Let $\opS$ be a system with \fncte{impulse response} $\fh(n)$,
 
 %---------------------------------------
 \begin{remark}
+\label{rem:Rxym}
 %---------------------------------------
 In the literature, there are varying and in general incompatible definitions of
 \fncte{cross-correlation} functions $\Rxy(n,m)$ and $\Rxy(m)$ \xxref{def:Rxynm}{def:Rxym}.
@@ -668,7 +669,7 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
         \\&\eqd \sum_{n\in\Z} \rvy[n] \brs{e^{+i\omega n}}^\ast
         \\&\eqd \sum_{n\in\Z} \rvy[n] e^{-i\omega n}
       \end{align*}
-      But arguably, a ``projection of $\rvy$ onto $\rvx$ would better be served by the use of $\Ryx(m)$ rather than $\Rxy(m)$.
+      But arguably, a ``projection of $\rvy$ onto $\rvx$" would better be served by the use of $\Ryx(m)$ rather than $\Rxy(m)$.
 
 \item If we follow Kay, then there is the advantage that you also end up with Bendat's result for $\Swxy(\omega)$.
 
@@ -893,58 +894,6 @@ and thus put the conjugate $\conj$ on $\rvy$ (i.e. follow Papoulis):
 \end{enumerate}
 \end{proof}
 
-%---------------------------------------
-\begin{definition}
-\footnote{
-  \citerpgc{shin2008}{293}{0470725648}{
-    $H_1(f)=\frac{\Swxy(f)}{\Swxx(f)}$ (9.63)
-    $H_2(f)=\frac{\Swyy(f)}{\Swyx(f)}$ (9.65)
-    },
-  \citePppc{allemang1987}{54}{55}{5.3.1 $H_1$ Technique; $[H]=[G_{XF}][G_{FF}]^{-1}$ (11)},
-  }
-\label{def:H1}
-\label{def:H2}
-%---------------------------------------
-\defbox{\begin{array}{Mrc>{\ds}l}
-    The transfer function $\fH_1(\omega)$ is defined as & \fH_1(\omega) &\eqd& \frac{\Swyx(\omega)}{\Swxx(\omega)}
-  \\The transfer function $\fH_2(\omega)$ is defined as & \fH_2(\omega) &\eqd& \frac{\Swyy(\omega)}{\Swxy(\omega)}
-\end{array}}
-\end{definition}
-
-%---------------------------------------
-\begin{proposition}
-\footnote{
-  \citerpg{shin2008}{293}{0470725648}
-  }
-%---------------------------------------
-\propbox{
-  \brb{\begin{array}{rc>{\ds}l}
-    \fy'[m] &=& \fy[m] + \fv[m]
-  \end{array}}
-  \implies
-  \brb{\begin{array}{FrclD}
-          &\fH_1(\omega) = \fH(\omega)
-%    \\(2).&\fH_2(\omega) &=& 
-  \end{array}}
-  }
-\end{proposition}
-\begin{proof}
-\begin{align*}
-  \fH_1(\omega)
-    &\eqd \frac{\Swxx[y'x](\omega)}{\Swxx(\omega)}
-    && \text{by definition of $\fH_1$}
-    && \text{\xref{def:H1}}
-  \\&\eqd \frac{\opDTFT\Rxx[y'x][m]}{\Swxx(\omega)}
-  \\&\eqd \frac{\opDTFT\pE\brs{\rvy'[m]\rvx^\ast[0]}}{\Swxx(\omega)}
-  \\&\eqd \frac{\opDTFT\pE\brs{(\rvy[m]+\fv[m])\rvx^\ast[0]}}{\Swxx(\omega)}
-  \\&=    \frac{\opDTFT\pE\brs{\rvy[m]\rvx^\ast[0]}}{\Swxx(\omega)}
-     +    \frac{\opDTFT\pE\brs{\fv[m]\rvx^\ast[0]}}{\Swxx(\omega)}
-  \\&=    \frac{\opDTFT\pE\brs{\rvy[m]\rvx^\ast[0]}}{\Swxx(\omega)}
-     +    0
-  \\&=    \frac{\Swyx(\omega)}{\Swxx(\omega)}
-  \\&\eqd \fH(\omega)
-\end{align*}
-\end{proof}
 %=======================================
 \section{Whitening}
 \index{whitening filter}
