--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -4,6 +4,21 @@
 % BibTeX input file
 %============================================================================
 
+@article{abom1986,
+  title        = {A note on random errors in frequency response estimators},
+  author       = {M. Abom},
+  institution  = {Department of Technical Acoustics, Royal Institute of Technology},
+  address      = {S-100 44 Stockholm, Sweden},
+  journal      = {Journal of Sound and Vibration},
+  volume       = {107},
+  number       = {2},
+  pages        = {355--358},
+  publisher    = {Elsevier},
+  year         = {1986},
+  doi          = {10.1016/0022-460X(86)90244-0},
+  url          = {http://adsabs.harvard.edu/abs/1986JSV...107..355A},
+  }
+
 @article{allemang1979,
   author       = {Randall J. Allemang and R. Zimmerman and David L. Brown},
   year         = {1979},
@@ -24,6 +39,19 @@
   month        = {December},
   year         = {1987},
   url          = {https://apps.dtic.mil/dtic/tr/fulltext/u2/a195145.pdf},
+  }
+
+@article{bendat1978,
+  journal      = {Journal of Sound and Vibration},
+  volume       = {59},
+  number       = {3},
+  year         = {1978},
+  month        = {August 08},
+  pages        = {405--421},
+  title        = {Statistical errors in measurement of coherence functions and input/output quantities},
+  author       = {J. S. Bendat},
+  url          = {https://doi.org/10.1016/S0022-460X(78)80007-8},
+  doi          = {10.1016/S0022-460X(78)80007-8},
   }
 
 @book{bendat2011,
@@ -82,6 +110,19 @@
   note         = {This article was originally published in Latin and has been translated into English.
                   The English version was published January 1954.},
   pages        = {23--36},
+  }
+
+@phdthesis{cobb1988,
+  author       = {Richard E. Cobb},
+  title        = {Confidence Bands, Measurement Noise, and Multiple Input - Multiple Output Measurements Using the Three-Channel Frequency Response Function Estimator},
+  year         = {1988},
+  institute    = {Virginia Polytechnic Institute and State University},
+  month        = {May},
+  type         = {Ph.D. Dissertation},
+  note         = {``Dissertation submitted to the Faculty of the Virginia Polytechnic Institute and State University in partial fulullment of the requirements for the degree of Doctor of Philosophy in Mechanical Engineering"},
+  pages        = {227},
+  urlv         = {https://vtechworks.lib.vt.edu/handle/10919/53675},
+  url          = {http://hdl.handle.net/10919/53675},
   }
 
 @book{cover,
@@ -214,6 +255,32 @@
   year         = {2018},
   month        = {accessed 2018 November 26},
   publisher    = {The MathWorks, Inc.},
+  }
+
+@article{mitchell1980,
+  title        = {An Improved Method for the Fast Fourier Transform (FFT) Calculation of the Frequency Response Function},
+  author       = {L. D. Mitchell},
+  journal      = {First European Signal Processing Conference},
+  address      = {Lausanne, Switzerland},
+  month        = {September 16--19},
+  year         = {1980},
+  pages        = {159--160},
+  note         = {citation from Cobb(1988)},
+  }
+
+@article{mitchell1982,
+  series       = {Mechanical Signature Analysis Papers},
+  title        = {Improved Methods for the Fast Fourier Transform (FFT) Calculation of the Frequency Response Function},
+  author       = {L. D. Mitchell},
+  institution  = {Department of Mechanical Engineering, Virginia Polytechnic Institute and State University},
+  address      = {Blacksburg, Virginia USA 24061},
+  journal      = {Journal of Mechanical Design},
+  volume       = {104},
+  number       = {2},
+  pages        = {277--279},
+  month        = {April 01},
+  doi          = {10.1115/1.3256336},
+  url          = {http://mechanicaldesign.asmedigitalcollection.asme.org/article.aspx?articleid=1451670},
   }
 
 @book{montmort1713,
