--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -13,9 +13,13 @@
     $H_1(f)=\frac{\Swxy(f)}{\Swxx(f)}$ (9.63);
     which differs from \pref{def:H1}, but see \prefp{rem:Rxym}
     },
+  \citerpgc{bendat2011}{185}{1118210824}{$H_1(f) = \frac{G_{xy}(f)}{G_{xx}(f)}$ (6.37)},
+  \citeP{bendat1978}{cited by Cobb(1988)---variance estimate for $\fH_1$},
   \citePc{allemang1979}{cited by Shin(2008)},
-  \citePpc{leuridan1986}{910}{\fncte{Least Squares Technique}; (8) $[G_{xx}](H)=[G_{xy}]$}
-  \citePppc{allemang1987}{54}{55}{5.3.1 $H_1$ Technique; $[H]=[G_{XF}][G_{FF}]^{-1}$ (11)}
+  \citePpc{leuridan1986}{910}{\fncte{Least Squares Technique}; (8) $[G_{xx}](H)=[G_{xy}]$},
+  \citeP{abom1986}{cited by Cobb(1988)---variance estimate for $\fH_1$},
+  \citePppc{allemang1987}{54}{55}{5.3.1 $H_1$ Technique; $[H]=[G_{XF}][G_{FF}]^{-1}$ (11)},
+  \citePpc{cobb1988}{2}{$^1\hat{H}(f)=\frac{\hat{G}_{yx}(f)}{\hat{G}_{xx}(f)}$ (1)}
   }
 \label{def:H1}
 %---------------------------------------
@@ -27,7 +31,14 @@
 %---------------------------------------
 \begin{definition}
 \footnote{
-  \citerpgc{shin2008}{293}{0470725648}{$H_2(f)=\frac{\Swyy(f)}{\Swyx(f)}$ (9.65)}
+  \citerpgc{shin2008}{293}{0470725648}{$H_2(f)=\frac{\Swyy(f)}{\Swyx(f)}$ (9.65);
+    which differs from \pref{def:H2}, but see \prefp{rem:Rxym}
+    },
+  \citerpgc{bendat2011}{186}{1118210824}{$H_2(f) = \frac{G_{yy}(f)}{G_{yx}(f)}$ (6.42)},
+
+  \citePc{mitchell1980}{cited by Cobb(1988)},
+  \citePc{mitchell1982}{cited by Cobb(1988)},
+  \citePpc{cobb1988}{3}{$^2\hat{H}(f)=\frac{\hat{G}_{yy}(f)}{\hat{G}_{xy}(f)}$ (1)}
   }
 \label{def:H2}
 %---------------------------------------
