Added Shah Function definition; More PSD ergodicity in mean material

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -706,6 +706,21 @@
   url          = {http://www-stat.wharton.upenn.edu/~steele/Publications/Books/CSMC/CSMC_index.html},
   }
 
+@book{bracewell1978,
+  isbn10       = {007007013X},
+  isbn         = {9780070070134},
+  title        = {The Fourier transform and its applications},
+  series       = {McGraw-Hill electrical and electronic engineering series},
+  edition      = {2, illustrated, International student edition},
+  author       = {Ronald Newbold Bracewell},
+  publisher    = {McGraw-Hill},
+  year         = {1978},
+  pages        = {444},
+  url          = {http://books.google.com/books?vid=ISBN007007013X},
+  urlw         = {http://www.worldcat.org/isbn/007007013X},
+  urla         = {http://www.amazon.com/dp/007007013X},
+  }
+
 @article{brenner1985,
   author       = {J. L. Brenner},
   title        = {Limits of means for large values of the variable},
@@ -1281,6 +1296,20 @@
   urlw         = {http://www.worldcat.org/isbn/0521047226},
   urla         = {http://www.amazon.com/dp/0521047226},
   language     = {English},
+  }
+
+@article{cordoba1989,
+  author       = {A. C/'ordoba},
+  title        = {Dirac combs},
+  volume       = {17},
+  number       = {3},
+  pages        = {191--196},
+  journal      = {Letters in Mathematical Physics},
+  url          = {https://doi.org/10.1007/BF00401584},
+  year         = {1989},
+  publisher    = {Kluwer Academic Publishers},
+  note         = {print ISSN 0377-9017 online ISSN 1573-0530},
+  urlx         = {https://link.springer.com/article/10.1007/BF00401584},
   }
 
 @inproceedings{crammer2007,
