--- a/common/found.tex
+++ b/common/found.tex
@@ -622,12 +622,14 @@ and a partition on a set defines an equivalence relation.
   % For half a century we have seen a mass of bizarre functions which appear 
   % to be forced to resemble as little as possible honest functions which serve some purpose.}
   {Logic sometimes breeds monsters. 
-   For half a century there has been springing up a host of weird functions, 
-   which seem to strive to have as little resemlence as possible to honest functions
+   %For half a century there has been springing up a host of weird functions, 
+   For half a century there has been springing up a host of bizarre functions, 
+   which seem to strive to have as little resemblance as possible to honest functions
    that are of some use.}
   \citetblt{
-    quote:      & \citerc{poincare_sam}{book 2, chap. 2, sec. 5, par. 3} \\
-    translation & \citerpg{poincare_sam_eng}{125}{0486432696}\\
+    quote:      & \citerc{poincare_sam}{book 2, chap. 2, sec. 5, par. 3},
+                  \citerpg{poincare_sam_eng}{125}{0486432696}\\
+   %translation & \citerpg{poincare_sam_eng}{125}{0486432696}\\
     image:  & \url{http://www-groups.dcs.st-and.ac.uk/~history/PictDisplay/Poincare.html}
     }
 
