--- a/common/frames.tex
+++ b/common/frames.tex
@@ -1185,7 +1185,8 @@ When is a set of orthonormal vectors in a Hilbert space $\spH$ \prope{total}?
   \citerppgc{ab}{298}{299}{0120502577}{Theorem 34.2},
   \citerpgc{christensen2003}{57}{0817642951}{Theorem 3.4.2},
   \citerppgc{berberian1961}{52}{53}{0821819127}{Theorem II\textsection8.3},
-  \citerppgc{heil2011}{34}{35}{0817646868}{Theorem 1.50}
+  \citerppgc{heil2011}{34}{35}{0817646868}{Theorem 1.50},
+  \citerpgc{bracewell1978}{112}{007007013X}{Rayleigh's theorem}
   %\citerpg{bollobas1999}{147}{0521655773},
   %\citerp{mallat}{595}
   }
