--- a/common/harFour.tex
+++ b/common/harFour.tex
@@ -385,13 +385,12 @@ complex numbers.
 \begin{definition}
 \label{def:conv}
 \footnote{
-  \citerp{bachman1964}{6}
+  \citerp{bachman1964}{6},
+  \citerpgc{bracewell1978}{108}{007007013X}{Convolution theorem}
   }
 %--------------------------------------
-%Let $\ff$ and $\fg$ be functions in the set of functions $\clFrc$.
-%$\conv:\{\R\to\C\}^2\to\{\R\to\C\}$
 \defbox{\indxs{\conv}\begin{array}{M}
-  The \hid{convolution operation} is defined as % $\conv\in\clF{\R^2}{\R}$ is defined as
+  The \opd{convolution operation} is defined as % $\conv\in\clF{\R^2}{\R}$ is defined as
   \\\indentx$\ds
     \brs{\ff\conv\fg}(x) 
     \eqd \ff(x)\conv \fg(x)
@@ -401,12 +400,14 @@ complex numbers.
 \end{array}}
 \end{definition}
 
-%Convolution is performed naturally by \hie{Linear Time Invariant} (\hi{LTI}) filter operations.
 \pref{thm:conv} (next) demonstrates that multiplication in the ``time domain"
 is equivalent to convolution in the ``frequency domain" and
 vice-versa.
 %--------------------------------------
 \begin{theorem}[\thmd{convolution theorem}]
+\footnote{
+  \citerpg{bracewell1978}{110}{007007013X}
+  }
 \label{thm:conv}
 %--------------------------------------
 Let $\opFT$ be the Fourier Transform operator
