--- a/common/pwspace.tex
+++ b/common/pwspace.tex
@@ -3,10 +3,6 @@
 % LaTeX/XeLaTeX file
 %============================================================================
 %=======================================
-%\chapter{Cardinal Sequence and Series}
-%=======================================
-
-%=======================================
 \section{Cardinal Series and Sampling}
 %=======================================
 %======================================
@@ -185,6 +181,23 @@ Let $\sigma\in\Rp$.
 \label{sec:sampling}
 \index{sampling}
 %======================================
+%--------------------------------------
+\begin{definition}
+\footnote{
+  \citerpgc{bracewell1978}{77}{007007013X}{The sampling or replicating symbol III(x)},
+  \citeP{cordoba1989}{191}.
+  Note: The symbol $\sha$ is the Cyrillic upper case ``sha" character, which 
+  has been assigned Unicode location U+0428.
+  Reference: \url{http://unicode.org/cldr/utility/character.jsp?a=0428}
+  }
+%--------------------------------------
+Let $\delta(x)$ be the \fncte{Dirac delta} distribution.
+\defboxt{
+  The \fnctd{Shah Function} $\sha(x)$ is defined as
+  $\ds\sha(x) \eqd \sum_{n\in\Z} \delta(x-n)$
+  }
+\end{definition}
+
 If $\ffd(x)$ is the function $\ff(x)$ sampled at rate $1/T$, 
 then $\Ffd(\omega)$ is simply $\Ff(\omega)$
 {\em replicated} every $1/T$ Hertz and {\em scaled} by $1/T$.
@@ -337,7 +350,7 @@ be their respective fourier transforms.
 Let $\ffd(x)$ be the {\bf sampled} $\ff(x)$ such that
   \[ \ffd(x) \eqd \sum_{n\in\Z} \ff(x) \delta(x-n\tau). \]
 \thmbox{
-  \mcom{\brb{\ffd(x) \eqd \sum_{n\in\Z} \ff(x) \delta(x-n\tau)}}{\fnctd{Shah function}}
+  \brb{\ffd(x) \eqd \ff(x)\sha(x) \eqd \ff(x) \sum_{n\in\Z} \delta(x-n\tau)}
   \quad\implies\quad
   \brb{\Ffd(\omega) = \frac{2\pi}{\tau}\sum_{n\in\Z} \Ff\brp{\omega -\frac{2\pi}{\tau}n}}
    }
@@ -385,12 +398,4 @@ then $\ff(x)$ is {\em perfectly reconstructed} (not just approximated)
 from the sampled values $\ff(n\tau)$ \xref{thm:sampling}.
  %using ``\hie{lowpass smoothing}" (the last technique in the list).
 %This perfect reconstruction is demonstrated in \prefp{thm:sampling}.
-
-
-
-
-
-
-
-
 
