--- a/common/sty/fonts.sty
+++ b/common/sty/fonts.sty
@@ -1638,3 +1638,9 @@
 %--------------------------------------
 \DeclareUTFcharacter[\UTFencname]{x03D5}{\upphi}    % upright phi
 
+%--------------------------------------
+% Cryllic Characters
+%--------------------------------------
+%\DeclareUTFcharacter[\UTFencname]{x0428}{\sha}    % Cryllic upper case "Sha" (used for Dirac comb)
+\newcommand{\sha}{\ensuretext{{\fntSymbola\symbol{"0428}}}}% Cryllic upper case "Sha" (used for Dirac comb)  
+
