--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -567,20 +567,31 @@ Let $\rvx(t)$ be a random variable that is \prope{stationary in the mean} such t
 \\\indentx$\ds\pE\brs{\rvx(t)}$ is constant with respect to $t$.
 \defboxt{
   $\rvx(t)$ is \propd{ergodic in the mean} if
-  \\\indentx$\ds\pE\brs{\rvx(t)} = \lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau}\rvx(t)\dt$
+  \\\indentx$\ds\mcomr{\pE\brs{\rvx(t)}}{\ope{ensemble average}} 
+   = \lim_{\tau\to\infty}
+   \mcom{\frac{1}{2\tau}\int_{-\tau}^{+\tau}\rvx(t)\dt}{\ope{time average}}
+  $
   }
 \end{definition}
 
-%20181127%%---------------------------------------
-%20181127%\begin{definition}
-%20181127%\label{def:energy}
-%20181127%%---------------------------------------
-%20181127%Let $\rvx(t)$ be a random variable.
-%20181127%\defboxt{
-%20181127%  The \fnctd{energy} of $\rvx(t)$ is
-%20181127%  \\\indentx$\ds\pE\brs{\rvx(t)} = \lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau}\rvx(t)\dt$
-%20181127%  }
-%20181127%\end{definition}
+%---------------------------------------
+\begin{proposition}
+%---------------------------------------
+\propbox{
+  \brb{\begin{array}{M}
+    $\rvx(t)$ is \prope{non-stationary}
+  \end{array}}
+  \quad\implies\quad
+  \brb{\begin{array}{M}
+    $\rvx(t)$ is \prope{not ergodic in the mean}
+  \end{array}}
+  }
+\end{proposition}
+\begin{proof}
+  If $\rvx(t)$ is \prope{non-stationary}, then $\pE\brs{\rvx(t)}$ is not constant with time.
+  But $\lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau}\rvx(t)\dt$ must be a constant 
+  (if it is \prope{convergent}).
+\end{proof}
 
 %---------------------------------------
 \begin{definition}
@@ -599,15 +610,24 @@ Let $\rvx(t)$ be a \prope{wide sense stationary} random process.
 \end{definition}
 
 Why does $\Swxx(\omega)$ deserve the name \fncte{power spectral density}?
-This is answered by the next theorem.
+This is answered by \pref{thm:psd_ergodic} (next).
+But to elaborate further, note that $\Swxx$ is the spectral representation of 
+the statistical relationship (the \ope{variance}) between samples of $\rvx(t)$. 
+For example, if there is no relationship, then $\Swxx(\omega)=1$.
+But in the case that $\rvx(t)$ is \prope{ergodic in the mean}, then $\Swxx$ takes on 
+an additional meaning---it describes the ``spectral power" present in $\rvx(t)$.
+This is demonstrated by the next theorem.
+
 %---------------------------------------
 \begin{theorem}
+\label{thm:psd_ergodic}
 %---------------------------------------
 Let $\rvx(t)$ be a \fncte{random process}.
 \thmbox{
   \brb{\begin{array}{FMD}
-      (A).&$\rvx(t)$ is \prope{wide sense stationary} & and
-    \\(B).&$\rvx(t)$ is \prope{ergodic in the mean}
+      %(A).&$\rvx(t)$ is \prope{wide sense stationary} & and
+      (A).&$\rvx(t)$ is \prope{ergodic in the mean} & and
+    \\(B).&$\ft{x}(\omega)$ \prope{exists}
   \end{array}}
   \implies
   \brb{\begin{array}{Frc>{\ds}lD}
@@ -626,6 +646,7 @@ Let $\rvx(t)$ be a \fncte{random process}.
      &&    \text{by definition of $\Rxx(t)$}
      &&    \text{\xref{def:Rxx}}
    \\&=    \pE\brs{\rvx^\ast(t) \int_{\tau\in\R}\rvx(t+\tau) e^{-i\omega\tau} \dtau }
+     &&    \text{by \prope{linearity} of $\pE$ operator}
    \\&=    \pE\brs{\rvx^\ast(t) \int_{u\in\R}\rvx(u) e^{-i\omega(u-t)} \du }
      &&    \text{where $u\eqd t+\tau$ $\implies$ $\tau=u-t$}
    \\&=    \pE\brs{\rvx^\ast(t)e^{i\omega t} \int_{u\in\R}\rvx(u) e^{-i\omega u} \du }
@@ -633,11 +654,13 @@ Let $\rvx(t)$ be a \fncte{random process}.
      &&    \text{by definition of \ope{Fourier Transform}}
      &&    \text{\xref{def:opFT}}
    \\&=    \pE\brs{\rvx^\ast(t)e^{i\omega t}} \ft{x}(\omega)
+     &&    \text{by hypothesis (B)}
    \\&=    \brs{\lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau} \rvx^\ast(t)e^{i\omega t} \dt} \ft{x}(\omega)
      &&    \text{by \prope{ergodic in the mean} hypothesis}
      &&    \text{\xref{def:ergomean}}
    \\&=    \lim_{\tau\to\infty}\frac{1}{2\tau}\brs{\int_{t\in\R}\rvx(t)e^{-i\omega t} \dt}^\ast \ft{x}(\omega)
    \\&=    \lim_{\tau\to\infty}\frac{1}{2\tau} \ft{x}^\ast(\omega) \ft{x}(\omega)
+     &&    \text{by hypothesis (B)}
    \\&=    \lim_{\tau\to\infty}\frac{1}{2\tau} \abs{\ft{x}(\omega)}^2
 \end{align*}
 \begin{align*}
@@ -645,6 +668,66 @@ Let $\rvx(t)$ be a \fncte{random process}.
      &= \int_{\omega\in\R} \lim_{\tau\to\infty}\frac{1}{2\tau} \abs{\ft{x}(\omega)}^2 \dw
    \\&= \lim_{\tau\to\infty}\frac{1}{2\tau} \int_{\omega\in\R} \abs{\ft{x}(\omega)}^2 \dw
    \\&= \lim_{\tau\to\infty}\frac{1}{2\tau} \int_{t\in\R} \abs{\rvx(t)}^2 \dt
+     && \text{by \thme{Plancheral's formula}}
+     && \text{\xxref{thm:planform}{thm:plancherel}}
+   \\&= \Pavg
+     && \text{by definition of $\Pavg$}
+     && \text{\xref{def:Pavg}}
+\end{align*}
+
+Thus, $\Swxx(\omega)$ is the power density of $\rvx(t)$ in the frequency domain.
+\end{proof}
+
+%---------------------------------------
+\begin{theorem}
+\label{thm:psd_ergodic_finite}
+%---------------------------------------
+Let $\rvx(t)$ be a \fncte{random process}.
+\thmbox{
+  \brb{\begin{array}{FMD}
+      %(A).&$\rvx(t)$ is \prope{wide sense stationary} & and
+      (A).&$\rvx(t)$ is \prope{ergodic in the mean} & and
+    \\(B).&$\rvx(t)$ has support only on $t\in\intcc{\tau_1}{\tau_2}$.
+  \end{array}}
+  \implies
+  \brb{\begin{array}{Frc>{\ds}lD}
+      (1).& \Swxx(\omega)      &=& \frac{1}{\tau_2-\tau_1} \mcom{\abs{\ft{x}(\omega)}^2}{\fncte{(ESD)}} & and
+    \\(2).& \Pavg\brs{\rvx(t)} &=& \int_{\omega\in\R} \Swxx(\omega) \dw                               & 
+  \end{array}}
+  }
+\end{theorem}
+\begin{proof}
+\begin{align*}
+   \Swxx(\omega)
+     &\eqd \int_{\tau\in\R}\Rxx(\tau) e^{-i\omega\tau} \dtau
+     &&    \text{by definition of $\Swxx(\omega)$}
+     &&    \text{\xref{def:Swxx}}
+   \\&=    \int_{\tau\in\R}\pE\brs{\rvx(t+\tau)\rvx^\ast(t)} e^{-i\omega\tau} \dtau
+     &&    \text{by definition of $\Rxx(t)$}
+     &&    \text{\xref{def:Rxx}}
+   \\&=    \pE\brs{\rvx^\ast(t) \int_{\tau\in\R}\rvx(t+\tau) e^{-i\omega\tau} \dtau }
+     &&    \text{by \prope{linearity} of $\pE$ operator}
+   \\&=    \pE\brs{\rvx^\ast(t) \int_{u\in\R}\rvx(u) e^{-i\omega(u-t)} \du }
+     &&    \text{where $u\eqd t+\tau$ $\implies$ $\tau=u-t$}
+   \\&=    \pE\brs{\rvx^\ast(t)e^{i\omega t} \int_{u\in\R}\rvx(u) e^{-i\omega u} \du }
+   \\&=    \pE\brs{\rvx^\ast(t)e^{i\omega t} \ft{x}(\omega) }
+     &&    \text{by definition of \ope{Fourier Transform}}
+     &&    \text{\xref{def:opFT}}
+   \\&=    \pE\brs{\rvx^\ast(t)e^{i\omega t}} \ft{x}(\omega)
+     &&    \text{by hypothesis (B)}
+   \\&=    \brs{\lim_{\tau\to\infty}\frac{1}{2\tau}\int_{-\tau}^{+\tau} \rvx^\ast(t)e^{i\omega t} \dt} \ft{x}(\omega)
+     &&    \text{by \prope{ergodic in the mean} hypothesis}
+     &&    \text{\xref{def:ergomean}}
+   \\&=    \frac{1}{\tau_2-\tau_1}\brs{\int_{t\in\R}\rvx(t)e^{-i\omega t} \dt}^\ast \ft{x}(\omega)
+   \\&=    \frac{1}{\tau_2-\tau_1}\ft{x}^\ast(\omega) \ft{x}(\omega)
+     &&    \text{by hypothesis (B)}
+   \\&=    \frac{1}{\tau_2-\tau_1}\abs{\ft{x}(\omega)}^2
+\end{align*}
+\begin{align*}
+   \int_{\omega\in\R} \Swxx(\omega) \dw
+     &= \int_{\omega\in\R} \lim_{\tau\to\infty}\frac{1}{2\tau} \abs{\ft{x}(\omega)}^2 \dw
+   \\&= \frac{1}{\tau_2-\tau_1} \int_{\omega\in\R} \abs{\ft{x}(\omega)}^2 \dw
+   \\&= \frac{1}{\tau_2-\tau_1} \int_{t\in\R} \abs{\rvx(t)}^2 \dt
      && \text{by \thme{Plancheral's formula}}
      && \text{\xxref{thm:planform}{thm:plancherel}}
    \\&= \Pavg
