--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -14,6 +14,7 @@
 \newcommand{\indentx}{\ensuremath{\mbox{}\qquad}}%
 \newcommand{\indentxx}{\ensuremath{\mbox{}\qquad\qquad}}%
 \newcommand{\indentdr}{\ensuremath{\begin{array}{@{}l@{\qquad}l@{}}&\end{array}}}
+\newcommand{\ffrac}[2]{{#1}/{#2}}
 
 %--------------------------------------
 % mathematics typefaces
@@ -1858,70 +1859,70 @@
 \newcommand{\exboxp}  [1]{\formboxxyzp{ex}  {exbg}  {\shortstack{\\e\\x}}   {#1}}
 \newcommand{\remboxp} [1]{\formboxxyzp{form}{formbg}  {\shortstack{\\r\\e\\m}}   {#1}}
 
-%20181116_deprecated%%--------------------------------------
-%20181116_deprecated%% pst-node settings and support
-%20181116_deprecated%% latmatall:
-%20181116_deprecated%%   #   description           example
-%20181116_deprecated%% ----------------------------------------------
-%20181116_deprecated%%   1 = number of rows        {5}
-%20181116_deprecated%%   2 = height                {20mm}
-%20181116_deprecated%%   3 = height scaling factor {1}
-%20181116_deprecated%%   4 = width  scaling factor {0.5}
-%20181116_deprecated%%   5 = nodes                 {\null & \null ...}
-%20181116_deprecated%%   6 = connecting lines      {\ncline{1,2}{2,1}\ncline{2,1}{3,3}...}
-%20181116_deprecated%%   7 = node labels           {\nput{2,1}{$x$}}
-%20181116_deprecated%%--------------------------------------
-%20181116_deprecated%\newlength{\rowsepx}%   row separation variable
-%20181116_deprecated%\newlength{\colsepx}%   column separation variable
-%20181116_deprecated%\newlength{\nradius}%   node radius
-%20181116_deprecated%\newlength{\ndiameter}% node diameter
-%20181116_deprecated%\setlength{\nradius}{1.25mm}%
-%20181116_deprecated%\setlength{\ndiameter}{2\nradius}%
-%20181116_deprecated%
-%20181116_deprecated%\newcommand{\latmatall}[7]{%
-%20181116_deprecated%  \setlength{\baselineskip}{2pt}%
-%20181116_deprecated%  %\psset{linewidth=1.0pt}%
-%20181116_deprecated%  \setlength{\rowsepx}{#2}
-%20181116_deprecated%  \setlength{\rowsepx}{#3\rowsepx}
-%20181116_deprecated%  \setlength{\rowsepx}{(\rowsepx-#1\ndiameter)/(#1-1)}
-%20181116_deprecated%  %\setlength{\colsepx}{#2}
-%20181116_deprecated%  %\setlength{\colsepx}{#3\colsepx}
-%20181116_deprecated%  %\setlength{\colsepx}{(\colsepx-#1\ndiameter)/(#1-1)}
-%20181116_deprecated%  %\setlength{\colsepx}{#4\colsepx}
-%20181116_deprecated%  \setlength{\colsepx}{#4\rowsepx}
-%20181116_deprecated%  \begin{psmatrix}[mnode=C, radius=\nradius, rowsep=\rowsepx, colsep=\colsepx, linecolor=latdot]%
-%20181116_deprecated%    #5
-%20181116_deprecated%  \end{psmatrix}%
-%20181116_deprecated%  %\psset{linecolor=latline}%
-%20181116_deprecated%    #6
-%20181116_deprecated%  %\psset{labelsep=1pt}%
-%20181116_deprecated%  \begin{color}{latlabel}%
-%20181116_deprecated%    #7
-%20181116_deprecated%  \end{color}%
-%20181116_deprecated%  }%
-%20181116_deprecated%
-%20181116_deprecated%\newcommand{\latmat}  [3]{\latmatall{#1}{17mm}{1} {1} {#2}{#3}{}  }% lattice matrix unlabeled
-%20181116_deprecated%\newcommand{\latmatw} [4]{\latmatall{#1}{17mm}{1} {#2}{#3}{#4}{}  }% lattice matrix unlabeled with width scale factor
-%20181116_deprecated%\newcommand{\latmath} [4]{\latmatall{#1}{17mm}{#2}{1} {#3}{#4}{}  }% lattice matrix unlabeled with height scale factor
-%20181116_deprecated%\newcommand{\latmats} [5]{\latmatall{#1}{17mm}{#2}{#3}{#4}{#5}{}  }% lattice matrix unlabeled with height and width scale factors
-%20181116_deprecated%\newcommand{\latmatl} [4]{% lattice matrix labeled
-%20181116_deprecated%  \psset{unit=24mm}%
-%20181116_deprecated%  \begin{pspicture}(-0.2,-0.2)(1.3,1.2)%
-%20181116_deprecated%    \rput[bl](0,0){\latmatall{#1}{24mm}{1} {1} {#2}{#3}{#4}}%
-%20181116_deprecated%    %\psgrid(-0.2,-0.2)(1.4,1.2)%
-%20181116_deprecated%  \end{pspicture}%
-%20181116_deprecated%  }%
-%20181116_deprecated%\newcommand{\latmatlw}[5]{\latmatall{#1}{24mm}{1} {#2}{#3}{#4}{#5}}% lattice matrix labeled with width scale factor
-%20181116_deprecated%\newcommand{\latmatlh}[5]{\latmatall{#1}{24mm}{#2}{1} {#3}{#4}{#5}}% lattice matrix labeled with height scale factor
-%20181116_deprecated%\newcommand{\latmatls}[6]{\latmatall{#1}{24mm}{#2}{#3}{#4}{#5}{#6}}% lattice matrix labeled with height and width scale factors
-%20181116_deprecated%  % 1 number of rows _________________|   |    |   |   |   |   |
-%20181116_deprecated%  % 2 height (without scaling factor)_____|    |   |   |   |   |
-%20181116_deprecated%  % 3 height scaling factor____________________|   |   |   |   |
-%20181116_deprecated%  % 4 width scaling factor_________________________|   |   |   |
-%20181116_deprecated%  % 5 nodes____________________________________________|   |   |
-%20181116_deprecated%  % 6 connecting lines_____________________________________|   |
-%20181116_deprecated%  % 7 labels___________________________________________________|
-%20181116_deprecated%
+%--------------------------------------
+% pst-node settings and support
+% latmatall:
+%   #   description           example
+% ----------------------------------------------
+%   1 = number of rows        {5}
+%   2 = height                {20mm}
+%   3 = height scaling factor {1}
+%   4 = width  scaling factor {0.5}
+%   5 = nodes                 {\null & \null ...}
+%   6 = connecting lines      {\ncline{1,2}{2,1}\ncline{2,1}{3,3}...}
+%   7 = node labels           {\nput{2,1}{$x$}}
+%--------------------------------------
+\newlength{\rowsepx}%   row separation variable
+\newlength{\colsepx}%   column separation variable
+\newlength{\nradius}%   node radius
+\newlength{\ndiameter}% node diameter
+\setlength{\nradius}{1.25mm}%
+\setlength{\ndiameter}{2\nradius}%
+
+\newcommand{\latmatall}[7]{%
+  \setlength{\baselineskip}{2pt}%
+  %\psset{linewidth=1.0pt}%
+  \setlength{\rowsepx}{#2}
+  \setlength{\rowsepx}{#3\rowsepx}
+  \setlength{\rowsepx}{(\rowsepx-#1\ndiameter)/(#1-1)}
+  %\setlength{\colsepx}{#2}
+  %\setlength{\colsepx}{#3\colsepx}
+  %\setlength{\colsepx}{(\colsepx-#1\ndiameter)/(#1-1)}
+  %\setlength{\colsepx}{#4\colsepx}
+  \setlength{\colsepx}{#4\rowsepx}
+  \begin{psmatrix}[mnode=C, radius=\nradius, rowsep=\rowsepx, colsep=\colsepx, linecolor=latdot]%
+    #5
+  \end{psmatrix}%
+  %\psset{linecolor=latline}%
+    #6
+  %\psset{labelsep=1pt}%
+  \begin{color}{latlabel}%
+    #7
+  \end{color}%
+  }%
+
+\newcommand{\latmat}  [3]{\latmatall{#1}{17mm}{1} {1} {#2}{#3}{}  }% lattice matrix unlabeled
+\newcommand{\latmatw} [4]{\latmatall{#1}{17mm}{1} {#2}{#3}{#4}{}  }% lattice matrix unlabeled with width scale factor
+\newcommand{\latmath} [4]{\latmatall{#1}{17mm}{#2}{1} {#3}{#4}{}  }% lattice matrix unlabeled with height scale factor
+\newcommand{\latmats} [5]{\latmatall{#1}{17mm}{#2}{#3}{#4}{#5}{}  }% lattice matrix unlabeled with height and width scale factors
+\newcommand{\latmatl} [4]{% lattice matrix labeled
+  \psset{unit=24mm}%
+  \begin{pspicture}(-0.2,-0.2)(1.3,1.2)%
+    \rput[bl](0,0){\latmatall{#1}{24mm}{1} {1} {#2}{#3}{#4}}%
+    %\psgrid(-0.2,-0.2)(1.4,1.2)%
+  \end{pspicture}%
+  }%
+\newcommand{\latmatlw}[5]{\latmatall{#1}{24mm}{1} {#2}{#3}{#4}{#5}}% lattice matrix labeled with width scale factor
+\newcommand{\latmatlh}[5]{\latmatall{#1}{24mm}{#2}{1} {#3}{#4}{#5}}% lattice matrix labeled with height scale factor
+\newcommand{\latmatls}[6]{\latmatall{#1}{24mm}{#2}{#3}{#4}{#5}{#6}}% lattice matrix labeled with height and width scale factors
+  % 1 number of rows _________________|   |    |   |   |   |   |
+  % 2 height (without scaling factor)_____|    |   |   |   |   |
+  % 3 height scaling factor____________________|   |   |   |   |
+  % 4 width scaling factor_________________________|   |   |   |
+  % 5 nodes____________________________________________|   |   |
+  % 6 connecting lines_____________________________________|   |
+  % 7 labels___________________________________________________|
+
 
 
 
