Started porting over to Papoulis definition of cross spectral density

--- a/common/operator.tex
+++ b/common/operator.tex
@@ -1294,16 +1294,16 @@ Let $\opA^0\eqd \opI$.
 %  }
 
 
-%--------------------------------------
-\begin{theorem}
-%--------------------------------------
-Let $\normspaceX$ be a normed linear space.
-\thmbox{
-  \text{$\opM$ is \prope{isometric}}
-  \qquad\implies\qquad
-  \no
-  }
-\end{theorem}
+%%--------------------------------------
+%\begin{theorem}
+%%--------------------------------------
+%Let $\normspaceX$ be a normed linear space.
+%\thmbox{
+%  \text{$\opM$ is \prope{isometric}}
+%  \qquad\implies\qquad
+%  \no
+%  }
+%\end{theorem}
 
 
 
