More references for random variable inner product space

--- a/common/bib/probstat.bib
+++ b/common/bib/probstat.bib
@@ -112,6 +112,36 @@
   pages        = {23--36},
   }
 
+@book{caines1988,
+  isbn10       = {0471081019},
+  isbn         = {9780471081012},
+  title        = {Linear Stochastic Systems},
+  volume       = {100},
+  series       = {Wiley Series in Probability and Statistics},
+  seriesx      = {Wiley series in probability and mathematical statistics: Probability and mathematical statistics},
+  author       = {Peter E. Caines},
+  publisher    = {J. Wiley},
+  year         = {1988},
+  pages        = {874},
+  url          = {http://books.google.com/books?vid=ISBN0471081019},
+  urla         = {http://www.amazon.com/dp/0471081019},
+  urlw         = {http://www.worldcat.org/title/linear-stochastic-systems/oclc/16225259},
+  }
+
+@book{caines2018,
+  isbn10       = {1611974712},
+  isbn         = {9781611974713},
+  title        = {Linear Stochastic Systems},
+  volume       = {77},
+  series       = {Classics in Applied Mathematics},
+  author       = {Peter E. Caines},
+  publisher    = {SIAM},
+  year         = {2018},
+  pages        = {874},
+  url          = {http://books.google.com/books?vid=ISBN1611974712},
+  urla         = {http://www.amazon.com/dp/1611974712},
+  }
+
 @phdthesis{cobb1988,
   author       = {Richard E. Cobb},
   title        = {Confidence Bands, Measurement Noise, and Multiple Input - Multiple Output Measurements Using the Three-Channel Frequency Response Function Estimator},
@@ -212,6 +242,19 @@
   url          = {https://www.researchgate.net/publication/283994172},
   }
 
+@book{lindquist2015,
+  isbn10       = {3662457504},
+  isbn         = {9783662457504},
+  title        = {Linear Stochastic Systems: A Geometric Approach to Modeling, Estimation and Identification},
+  volume       = {1},
+  series       = {Series in Contemporary Mathematics},
+  author       = {Anders Lindquist and Giorgio Picci},
+  publisher    = {Springer},
+  year         = {2015},
+  pages        = {781},
+  url          = {http://books.google.com/books?vid=ISBN3662457504},
+  urla         = {http://www.amazon.com/dp/3662457504},
+  }
 @book{manolakis2005,
   isbn10       = {1580536107},
   isbn         = {9781580536103},
@@ -230,7 +273,7 @@
   author       = {Georges Matheron},
   title        = {Random Sets and Integral Geometry},
   publisher    = {John Wiley \& Sons},
-  address      = {New York}, 
+  address      = {New York},
   year         = {1975},
   isbn         = {0-471-57621-2},
   note         = {Library QA273.5.M37},
@@ -294,8 +337,8 @@
   edition      = {2},
   language     = {French},
   note         = {``Essays on the analysis of games of chance", 2006 AMS reprint edition,
-                  An English translation concerning the \emph{St. Petersburg Paradox} correspondence 
-                  by Richard J. Pulskamp called ``Correspondence of Nicolas Bernoulli concerning the St. Petersburg Game"  
+                  An English translation concerning the \emph{St. Petersburg Paradox} correspondence
+                  by Richard J. Pulskamp called ``Correspondence of Nicolas Bernoulli concerning the St. Petersburg Game"
                   is available at \url{http://www.cs.xu.edu/math/Sources/Montmort/stpetersburg.pdf}},
   address      = {Providence, Rhode Island},
   publisher    = {American Mathematical Society},
