--- a/common/expectation.tex
+++ b/common/expectation.tex
@@ -198,7 +198,7 @@ Then
 %=======================================
 %---------------------------------------
 \begin{theorem}[\thmd{Markov's inequality}]
-\citetbl{
+\footnote{
   \citerp{ross}{395}
   }
 \label{thm:markovineq}
@@ -231,7 +231,7 @@ $a\in(0,\infty)$. Then
 \begin{theorem}[Chebyshev's inequality]
 \index{Chebyshev's inequality}
 \index{theorems!Chebyshev's inequality}
-\citetbl{
+\footnote{
   \citerp{ross}{396}
   }
 %---------------------------------------
@@ -287,7 +287,10 @@ and topological spaces.
 
 %---------------------------------------
 \begin{theorem}
-\citetbl{
+\footnote{
+  \citerppgc{lindquist2015}{25}{26}{3662457504}{2.1 Hilbert Space of Second-Order Random Variables. $\inprod{\xi}{\eta}=\pE\setn{\xi\bar{\eta}}$},
+  \citerpgc{caines1988}{21}{0471081019}{$Exy=\int_\Omega x(\omega)y(\omega)dP(\omega)$},
+  \citerpgc{caines2018}{21}{1611974712}{$Exy=\int_\Omega x(\omega)y(\omega)dP(\omega)$},
   \citerpp{moon2000}{105}{106}
   }
 \label{thm:prb_vspace}
