--- a/common/randprocess.tex
+++ b/common/randprocess.tex
@@ -84,6 +84,9 @@ and \prefp{fig:X(t,w)graph}.
 
 %---------------------------------------
 \begin{definition}
+\footnote{
+  \citerpgc{papoulis1984}{216}{0070484686}{$R_{xy}(t_1,t_2)=E\brb{\rvx(t_1)\rvy^\ast(t_2)}$ (9-35)},
+  }
 \label{def:Rxx}
 \label{def:opR}
 \label{def:Rxy}
@@ -92,7 +95,7 @@ Let $\rvx(t)$ and $\rvy(t)$ be random processes.\\
 \defbox{
   \begin{array}{MlMlc>{\ds}l}
        The \fnctd{mean}                     & \pmeanx(t) & of $\rvx(t)$              is & \pmeanx(t)&\eqd& \pE\brs{\rvx(t)}                    %& \text{(\prope{mean functional})} \\
-     \\The \fnctd{crosscorrelation}         & \Rxy(t)    & of $\rvx(t)$ and $\rvy(t)$is & \Rxy(t,u) &\eqd& \pE\brs{\rvx(t)\rvy^\ast(u)}        %& \text{(\prope{cross-correlation bilinear functional})} \\
+     \\The \fnctd{cross-correlation}        & \Rxy(t)    & of $\rvx(t)$ and $\rvy(t)$is & \Rxy(t,u) &\eqd& \pE\brs{\rvx(t)\rvy^\ast(u)}        %& \text{(\prope{cross-correlation bilinear functional})} \\
      \\The \fnctd{autocorrelation function} & \Rxx(t)    & of $\rvx(t)$              is & \Rxx(t,u) &\eqd& \pE\brs{\rvx(t)\rvx^\ast(u)}        %& \text{(\prope{auto-correlation bilinear functional})} \\
      \\The \fnctd{autocorrelation operator} & \opR\ff    & of $\ff(t)$               is & \opR f    &\eqd& \int_{u\in\R}\Rxx(t,u)\ff(u) \du     %& \text{(\prope{auto-correlation operator})}
   \end{array}
